--- a/users-auth/helm/values.yaml
+++ b/users-auth/helm/values.yaml
@@ -16,7 +16,7 @@ fullnameOverride: ""
 
 metrics:
   serviceMonitor:
-    enabled: false
+    enabled: true
 
 podSecurityContext: {}
   # fsGroup: 2000
