--- a/enviroment/helm/config/templates/configmap.yaml
+++ b/enviroment/helm/config/templates/configmap.yaml
@@ -8,7 +8,8 @@ data:
   MS_CFG_NAMESPACE: {{ .Release.Namespace }}
   MS_CFG_LOGGER: "true"
   MS_CFG_LOG_LEVEL: "debug"
-  MS_CFG_TRANSPORTER: "kafka://kafka:9092"
+  # MS_CFG_TRANSPORTER: "kafka://kafka:9092"
+  MS_CFG_TRANSPORTER: "nats://nats:4222"
   MS_CFG_SERIALIZER: "JSON"
   MS_CFG_REQUESTTIMEOUT: "5000"
   MS_CFG_REQUEST_TIMEOUT: "5000"
@@ -33,3 +34,23 @@ data:
   MS_CFG_POSTGRES_USER: "postgres"
   MS_CFG_POSTGRES_PASSWORD: "postgres"
   MS_CFG_POSTGRES_HOST: "postgres-postgresql"
+  MS_CFG_RETRY_POLICY_ENABLED: "true"
+  MS_CFG_HEALTHCHECK_PORT: "3001"
+  MS_CFG_HEALTHCHECK_URL: "/health"
+  MS_CFG_HEALTHCHECK_CHECK_TRANSPORTER: "true"
+  MS_CFG_HEALTHCHECK_ALWAYS_FAIL: "false"
+  MS_CFG_TRANSPORTER_METADATA_MAX_AGE: "1000"
+  MS_CFG_TRANSPORTER_IDEMPOTENT: "true"
+  MS_CFG_TRANSPORTER_MAX_INFLIGHT_REQUESTS: "1"
+  MS_CFG_TRANSPORTER_RETRIER_INITIAL_RETRY_TIME: "100"
+  MS_CFG_TRANSPORTER_RETRIER_RETRY_COUNT: "20"
+  MS_CFG_TRACING_ENABLED: "true"
+  MS_CFG_TRACING_EVENTS: "true"
+  MS_CFG_TRACING_STACKTRACE: "true"
+  MS_CFG_TRACING_JAEGER_HOST: "jaeger-jaeger-all-in-one"
+  MS_CFG_TRACING_JAEGER_PORT: "6832"
+  MS_CFG_TRACING_SAFETY_TAGS_ENABLED: "true"
+  MS_CFG_POSTGRES_POOL_MIN: "3"
+  MS_CFG_POSTGRES_POOL_MAX: "5"
+  MS_CFG_POSTGRES_POOL_EVICT: "2147483647"
+  MS_CFG_HASH_SALT_ROUNDS: "2"
