--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -18,20 +18,22 @@
     "eslint": "6.8.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-prefer-arrow": "1.1.7",
-    "moleculer-repl": "0.5.3",
+    "moleculer-repl": "0.7.2",
     "ts-node": "8.10.2",
     "typescript": "4.5.5"
   },
   "dependencies": {
     "@types/node": "17.0.23",
     "@types/socket.io": "3.0.2",
+    "cpu-percentage": "1.0.3",
     "dotenv": "8.2.0",
+    "jaeger-client": "^3.19.0",
     "kafka-node": "4.1.3",
     "lodash": "4.17.21",
-    "moleculer": "0.14.19",
-    "moleculer-web": "0.9.1",
-    "qs": "6.10.3",
-    "cpu-percentage": "1.0.3"
+    "moleculer": "0.14.23",
+    "moleculer-web": "0.10.4",
+    "nats": "^2.7.1",
+    "qs": "6.10.3"
   },
   "engines": {
     "node": ">= 13.x.x"
