--- a/notification/package.json
+++ b/notification/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "[ONLINE_SHOP] notification",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc && cp -r ./src/app/email-templates ./dist/src/app/email-templates",
     "dev": "ts-node ./node_modules/moleculer/bin/moleculer-runner.js --hot --repl --config moleculer.config.ts src/services/**/*.service.ts",
     "start": "moleculer-runner --config ./dist/moleculer.config.js ./dist/src/services/**/*.service.js",
     "test": "echo 'tests not implemented'",
@@ -32,28 +32,29 @@
     "ts-node": "9.1.1",
     "typescript": "4.1.4",
     "fastest-validator-decorators": "1.0.6",
-    "sequelize-typescript": "2.0.0",
+    "sequelize-typescript": "2.1.3",
     "moleculer-decorators": "1.3.0"
   },
   "dependencies": {
-    "@types/bcrypt": "5.0.0",
     "@js-joda/core": "3.2.0",
+    "@types/bcrypt": "5.0.0",
     "async-retry": "1.3.3",
     "cpu-percentage": "1.0.3",
     "decimal.js": "10.4.0",
     "dotenv": "8.2.0",
     "handlebars": "4.7.7",
+    "jaeger-client": "3.19.0",
     "kafka-node": "5.0.0",
     "lodash": "4.17.20",
-    "moleculer": "0.14.8",
+    "moleculer-repl": "0.7.2",
     "moleculer-mail": "1.2.5",
-    "moleculer-repl": "0.6.4",
-    "nats": "1.4.12",
+    "moleculer": "0.14.23",
+    "nats": "^1.4.12",
     "node-sass": "^7.0.3",
     "pg": "8.5.1",
     "pug": "^3.0.2",
     "reflect-metadata": "0.1.13",
-    "sequelize": "6.5.0",
+    "sequelize": "6.21.3",
     "sequelize-cli": "6.2.0"
   },
   "engines": {
