--- a/order/package.json
+++ b/order/package.json
@@ -32,7 +32,7 @@
     "ts-node": "9.1.1",
     "typescript": "4.1.4",
     "fastest-validator-decorators": "1.0.6",
-    "sequelize-typescript": "2.0.0",
+    "sequelize-typescript": "2.1.3",
     "moleculer-decorators": "1.3.0"
   },
   "dependencies": {
@@ -41,14 +41,15 @@
     "async-retry": "1.3.3",
     "cpu-percentage": "1.0.3",
     "dotenv": "8.2.0",
+    "jaeger-client": "^3.19.0",
     "kafka-node": "5.0.0",
     "lodash": "4.17.20",
-    "moleculer": "0.14.8",
-    "moleculer-repl": "0.6.4",
-    "nats": "1.4.12",
+    "moleculer-repl": "0.7.2",
+    "moleculer": "0.14.23",
+    "nats": "^1.4.12",
     "pg": "8.5.1",
     "reflect-metadata": "0.1.13",
-    "sequelize": "6.5.0",
+    "sequelize": "6.21.3",
     "sequelize-cli": "6.2.0"
   },
   "engines": {
